# Huffman-algorithm

./: CMakeLists.txt  README.md  utility.cpp
Huffman_tree/: Huffman_tree.cpp  Huffman_tree.h
archiver/: archiver.cpp  archiver.h
bit_seq/: bit_seq.cpp  bit_seq.h
test/: gtest_main.cc  humman_test.cpp
test_files/: bible.txt  white_broken.huff
